11.lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-service
  namespace: n8n
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 5678
  selector:
    app: n8n-main
